Issue #3420753: Regression from Issue [#3389403] Unpublished node in dark mode has light background

--- a/styles/theme/variables.scss
+++ b/styles/theme/variables.scss
@@ -42,6 +42,9 @@
   --gin-bg-secondary: var(--gin-bg-layer);
   --gin-bg-header: #eeeff3; //#e6e8ef;
 
+  // Unpublished
+  --gin-bg-unpublished: var(--gin-bg-danger-light);
+
   // Color pattern
   --gin-pattern: var(--gin-border-color);
   --gin-pattern-fallback: var(--gin-bg-layer2);
